Workspace dto available dates added